--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html><head><title>Admin</title></head><body><h2>Admin Paneel</h2></body></html>
+
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8" />
+  <title>Admin - NexaGast Voice</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <div class="container">
+    <h2>Adminpaneel</h2>
+    <p>Overzicht van klanten komt hier.</p>
+  </div>
+</body>
+</html>
