--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html><head><title>NexaGast Voice</title></head><body><h1>Welkom bij NexaGast Voice</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>NexaGast Voice</title>
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>
+<body>
+  <div class="container">
+    <img src="logo.png" alt="NexaGast Voice Logo" class="logo" />
+    <h1>NexaGast Voice – AI Telefoon Assistent</h1>
+    <p>Beheer oproepen automatisch in meerdere talen, 24/7 actief. Klaar voor gebruik.</p>
+    <div class="btn-group">
+      <a href="login.html" class="btn">Login</a>
+      <a href="dashboard.html" class="btn">Klantendashboard</a>
+      <a href="admin.html" class="btn">Admin</a>
+    </div>
+  </div>
+</body>
+</html>
