--- a/login.html
+++ b/login.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html><head><title>Login</title></head><body><h2>Login Pagina</h2></body></html>
+
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8" />
+  <title>Login - NexaGast Voice</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <div class="container">
+    <h2>Login</h2>
+    <form>
+      <input type="email" placeholder="E-mailadres" required /><br/>
+      <input type="password" placeholder="Wachtwoord" required /><br/>
+      <button type="submit" class="btn">Login</button>
+    </form>
+  </div>
+</body>
+</html>
