--- a/dashboard.html
+++ b/dashboard.html
@@ -1,1 +1,28 @@
-<!DOCTYPE html><html><head><title>Dashboard</title></head><body><h2>Dashboard</h2></body></html>
+
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8" />
+  <title>Dashboard - NexaGast Voice</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <div class="container">
+    <h2>Klantendashboard</h2>
+    <p>Status: Actief</p>
+    <label>Fallback-nummer: <input type="text" placeholder="+32..." /></label><br/>
+    <label>Taal:
+      <select>
+        <option selected>Nederlands</option>
+        <option>Frans</option>
+        <option>Engels</option>
+        <option>Duits</option>
+        <option>Spaans</option>
+        <option>Arabisch</option>
+      </select>
+    </label>
+    <br/><br/>
+    <button class="btn">Opslaan</button>
+  </div>
+</body>
+</html>
